[rt25901_atf] Skeleton documentation for architecture, contrib and omapi

--- a/doc/devel/mainpage.dox
+++ b/doc/devel/mainpage.dox
@@ -8,8 +8,21 @@
  http://www.isc.org/software/dhcp website.
 
  @section toc Table Of Contents
+  - @subpage archSrv
+  - @subpage archCli
   - @subpage tests
+    - @subpage testsOverview
+    - @subpage testsAtf
+    - @subpage testsAtfAdding
+    - @subpage testsAtfCoding
   - @subpage debug
+  - @subpage omapi
+    - @subpage omapiIntro
+    - @subpage omapiC
+    - @subpage dhcpctl
+  - @subpage contrib
+    - @subpage contribDir
+    - @subpage codingGuidelines
 
  Note: some of the links below may not work if corresponding logs are not available.<br/>
 
