[rt25901_atf] tests/HOWTO-unit-test mostly moved to Devel Guide
- moved major parts of HOWTO to Developer's Guide, leaving only
  brief notes and pointers to new location

- described Valgrind

--- a/doc/devel/mainpage.dox
+++ b/doc/devel/mainpage.dox
@@ -19,6 +19,7 @@
     - @subpage qaTests
     - @subpage cppcheck
     - @subpage doxygen
+    - @subpage valgrind
   - @subpage debug
   - @subpage omapi
     - @subpage omapiIntro
