--- a/doc/devel/qa.dox
+++ b/doc/devel/qa.dox
@@ -1,10 +1,10 @@
 /**
  @page qa Quality Assurance
 
-There is wide scale effort in progress to improve generic quality of the ISC
-DHCP implementation. The following section describes major aspects of
-quality assurance that is being implemented. As this is a work in progress,
-expect radical changes in that area.
+There is a wide scale effort in progress to improve the quality of the ISC
+DHCP implementation. The following section describes the major aspects of
+quality assurance that are being implemented. As this is a work in progress,
+expect radical changes in this area.
 
  @section qaTests ATF Unit-tests
 
@@ -12,11 +12,11 @@ expect radical changes in that area.
 
  @section cppcheck cppcheck tool
 
-<a href="http://cppcheck.sourceforge.net/">cppcheck</a> is a static analysis too
+<a href="http://cppcheck.sourceforge.net/">cppcheck</a> is a static analysis tool
 for C/C++ code. Unlike C/C++ compilers and many other analysis tools it does not
 detect syntax errors in the code. Cppcheck primarily detects the types of bugs
 that the compilers normally do not detect. To generate cppcheck report, you
-have cppcheck installed in your system. Generation is simple:
+must have cppcheck installed in your system. Generation is simple:
 
 @verbatim
 cd doc/
@@ -25,8 +25,8 @@ make cppcheck
 
 The log files will be stored in doc/html/cppcheck.log and
 doc/html/cppcheck-error.log. While the former is useful for verifying that all
-sources were checked, the latter is much more useful. It contains list of
-problems that were detected by cppcheck. The goal is to solve all problems
+sources were checked, the latter is much more useful. It contains a list of
+problems that were detected by cppcheck. The goal is to correct all problems
 and make this an empty file.
 
 In the unlikely event of cppcheck finding false positives it is possible to add
@@ -72,14 +72,14 @@ They are described by a separate document called DHCP Test Plan.
 
 ISC is also developing a performance measurement tool, called
 perfdhcp. Its main purpose is to measure performance of DHCPv4 and
-DHCPv6 server. It is being developed as part of the BIND10 project.
+DHCPv6 servers. It is being developed as part of the BIND10 project.
 See tests/tools/perfdhcp directory in BIND10 source code.
 
  @section tahiTests Conformance tests using TAHI
 
-<a href="http://tahi.org">TAHI project</a> developed extensive suite of <a
+<a href="http://tahi.org">TAHI project</a> developed an extensive suite of <a
 href="http://tahi.org/logo/dhcpv6/">DHCPv6 conformance tests</a>. ISC plans to
-deploy and run them periodically in a near future.
+deploy and run them periodically in the near future.
 
  @section valgrind Memory correctness using valgrind
 
@@ -88,6 +88,6 @@ analysis. It allows running existing code (often even without recompiling) in a
 special environment that tracks memory operations. In particular, it is able to
 detect: memory leaks, buffer overflows, usage of uninitialized memory, double
 frees and similar errors. We currently do not use valgrind in ISC DHCP testing,
-but there are plans for start using it.
+but there are plans for starting to use it.
 
 */
