[rt30281] Modify the renew_lease6() code to properly handle a lease time that is reduced rather than extended. Fix the ATF tests for mdb6 and add a new test to check the above condition.

--- a/doc/devel/mainpage.dox
+++ b/doc/devel/mainpage.dox
@@ -8,6 +8,8 @@
  http://www.isc.org/software/dhcp website.
 
  @section toc Table Of Contents
+  - Server
+    - @subpage ipv6structures
   - @subpage tests
     - @subpage testsOverview
     - @subpage testsAtf
