[master] [ISC-Bugs #26108] Add a compile time option, enable-secs-byteorder, to deal with clients that do the byte ordering on the secs field incorrectly. This field should be in network byte order but some clients get it wrong.  When this option is enabled the server will examine the secs field and if it looks wrong (high byte non zero and low byte zero) swap the bytes.  The default is disabled.  This option is only useful when doing load balancing within failover.

--- a/README
+++ b/README
@@ -148,6 +148,11 @@ system; otherwise, it will complain.  If it can't figure out what
 system you are using, that system is not supported - you are on
 your own.
 
+Several options may be enabled or disabled via the configure command.
+You can get a list of these by typing:
+
+	./configure --help
+
 			 DYNAMIC DNS UPDATES
 
 A fully-featured implementation of dynamic DNS updates is included in
