--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		           Version 4.1-ESV-R8rc1
-			    18 December 2012
+		           Version 4.1-ESV-R8
+			     8 January 2013
 
 			      README FILE
 
@@ -97,7 +97,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1-ESV-R8rc1, an extended support (ESV) release that
+This is ISC DHCP 4.1-ESV-R8, an extended support (ESV) release that
 provides patches for several bugs.
 
 ESVs are intended for users who have longer upgrade constraints 
@@ -138,12 +138,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1-ESV-R8rc1.tar.gz
-	tar xvf dhcp-4.1-ESV-R8rc1.tar
+	gunzip dhcp-4.1-ESV-R8.tar.gz
+	tar xvf dhcp-4.1-ESV-R8.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1-ESV-R8rc1 subdirectory that you've just created and
+Now, cd to the dhcp-4.1-ESV-R8 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
