Various minor documentation improvements:
remove repeated words

fix: it's to its

some minor formatting added
	(this needs to be improved still, there is a mix
	of \fB Bold and \fI underline for same things)

spelling fixes

minor punctuation fixes (remove ...)

uppercase an acronym that is not a config item

(I didn't get this reviewed, these all are very minor or obvious.)

--- a/client/dhclient.8
+++ b/client/dhclient.8
@@ -245,7 +245,7 @@ inittab on System V systems.  This implies \fB-v\fR.
 .TP
 .BI \-nw
 Become a daemon immediately (nowait) rather than waiting until an
-an IP address has been acquired.
+IP address has been acquired.
 .TP
 .BI \-q
 Be quiet at startup, this is the default.
@@ -361,7 +361,7 @@ It is used to restore normal operation after using \fB-T\fR or \fB-P\fR.
 .PP
 .I Modifying default file locations:
 The following options can be used to modify the locations a client uses
-for it's files.  They can be particularly useful if, for example,
+for its files.  They can be particularly useful if, for example,
 .B DBDIR
 or
 .B RUNDIR
