--- a/server/dhcpd.8
+++ b/server/dhcpd.8
@@ -246,7 +246,7 @@ automatically before installing it.
 .BI \-T
 Test the lease file.  The server tests the lease file
 for correct syntax, but will not attempt to perform any network
-operations.  This can be used to test a new leaes file
+operations.  This can be used to test a new lease file
 automatically before installing it.
 .TP
 .BI \-tf \ tracefile
@@ -273,7 +273,7 @@ Print version number and exit.
 .I Modifying default file locations:
 The following options can be used to modify the locations 
 .B dhcpd
-uses for it's files.  Because of the importance of using the same
+uses for its files.  Because of the importance of using the same
 lease database at all times when running dhcpd in production, these
 options should be used \fBonly\fR for testing lease files or database
 files in a non-production environment.
