--- a/server/dhcpd.leases.5
+++ b/server/dhcpd.leases.5
@@ -215,7 +215,7 @@ manual page.
 .B The \fIddns-text\fB variable
 .PP
 The \fIddns-text\fR variable is used to record the value of the
-client's TXT identification record when the interim ddns update
+client's TXT identification record when the interim DDNS update
 style has been used to update the DNS for a particular lease.
 .PP
 .B The \fIddns-fwd-name\fB variable
@@ -227,9 +227,9 @@ update the client's PTR record.
 .PP
 .B The \fIddns-client-fqdn\fB variable
 .PP
-If the server is configured to use the interim ddns update style, and
-is also configured to allow clients to update their own fqdns, and the
-client did in fact update its own fqdn, then the
+If the server is configured to use the interim DDNS update style, and
+is also configured to allow clients to update their own FQDNs, and the
+client did in fact update its own FQDN, then the
 \fIddns-client-fqdn\fR variable records the name that the client has
 indicated it is using.   This is the name that the server will have
 used to update the client's PTR record in this case.
