-n [v4_2] -n [master] Correct NTP rfc number

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1,6 +1,6 @@
 .\"	$Id: dhcp-options.5,v 1.45.18.6 2011/05/20 14:33:26 tomasz Exp $
 .\"
-.\" Copyright (c) 2012 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2012-2013 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
@@ -732,7 +732,7 @@ means allow forwarding.
 ]\fB;\fR
 .RS 0.25i
 .PP
-This option specifies a list of IP addresses indicating NTP (RFC 1035)
+This option specifies a list of IP addresses indicating NTP (RFC 5905)
 servers available to the client.  Servers should be listed in order
 of preference.
 .RE
