--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1,6 +1,6 @@
 .\"	$Id: dhcp-options.5,v 1.43.8.4 2010/07/13 20:57:18 dhankins Exp $
 .\"
-.\" Copyright (c) 2012 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2012-2013 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
@@ -724,7 +724,7 @@ means allow forwarding.
 ]\fB;\fR
 .RS 0.25i
 .PP
-This option specifies a list of IP addresses indicating NTP (RFC 1035)
+This option specifies a list of IP addresses indicating NTP (RFC 5905)
 servers available to the client.  Servers should be listed in order
 of preference.
 .RE
